restore use of sticky on safari, workaround z-index bug...

--- a/resources/scss/compat.scss
+++ b/resources/scss/compat.scss
@@ -42,8 +42,11 @@
   }
   
   .stick-up { /* safari is being way irresponsible drawing img sticky layers.. and general compositing/z-index */
-    position: relative !important;
-    top: initial;
+    // position: relative !important;
+    // top: initial;
+  }
+  section {
+    transform: translate3d(0, 0, 0); // apparently fixes safari sticky/fixed z-index scrolling bug! section might we bit of a wide net tho..
   }
   .parallax-bg {
     transform: initial; // safari doesnt want the y -60% adjustment, initial since cant use parallax anyways
